fixed widget container z-index

--- a/src/styles/_widget.scss
+++ b/src/styles/_widget.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
+    z-index: 2000;
 
     input {
         outline-width: 0;
